crossplane/aws/loadgen/vpc.yaml
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: tops-loadgen-v2-default-route
  labels:
    app.kubernetes.io/name: tops-loadgen-v2
    app.kubernetes.io/component: vpc
spec:
  forProvider:
    region: us-east-1
    routeTableIdRef:
      name: tops-loadgen-v2-rt
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: tops-loadgen-v2-igw
  providerConfigRef:
    name: default
